--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -6,6 +6,8 @@
             <div class="p-3 shadow-1 link f-c" routerLink="/loadkeys">Cargar Clave</div>
             <div class="p-3 shadow-1 link f-c" routerLink="/LoadIdentifiers">Cargar Asistencia</div>
             <div class="p-3 shadow-1 link f-c" routerLink="/loadAnswers">Cargar Respuestas</div>
+            <div class="p-3 shadow-1 link f-c" routerLink="/reportVacancies">Por vacantes</div>
+
         </div>
         <div class="pb-4" style="flex: 1; display: flex; align-items: flex-end; width: 100%; justify-content: center;">
             <img src="/assets/indicators.png" alt="" srcset="" style="max-height: 250px;">
